cahee blog completed

--- a/src/blocks/blog/_blog.pug
+++ b/src/blocks/blog/_blog.pug
@@ -16,7 +16,7 @@ mixin blog
                                                 time 20 
                                                 p NOV
                                             .description
-                                                p Green Smoothies: Too Much of a Good Thing?
+                                                a(href="#") Green Smoothies: Too Much of a Good Thing?
                                                 p.author By Auskteez - 2 hours ago
                                     .col-xl-4.col-lg-4.col-md-6.col-sm-6.col-12
                                         .blog__post2.gradient
@@ -25,7 +25,7 @@ mixin blog
                                                 time 14 
                                                 p NOV
                                             .description
-                                                p Growing Food and a “Thirst” for Innovation
+                                                a(href="#") Growing Food and a “Thirst” for Innovation
                                                 p.author By Auskteez - 3 hours ago
                                     .col-xl-4.col-lg-4.offset-lg-0.offset-md-3.col-sm-6.offset-sm-3.col-12
                                         .blog__post3.gradient
@@ -34,7 +34,7 @@ mixin blog
                                                 time 10 
                                                 p NOV
                                             .description
-                                                p Pesticides & Food: What You Need to Know
+                                                a(href="#") Pesticides & Food: What You Need to Know
                                                 p.author By Auskteez - 6 hours ago
                 .blog__button
                     .blog__button--style
